[package]
name = "mdlint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
jwalk = "0.8.1"
pulldown-cmark = "0.9.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"] }
